commit for new change on other pc

--- a/develop_realtimeEmotionRecognition2.ipynb
+++ b/develop_realtimeEmotionRecognition2.ipynb
@@ -513,6 +513,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('extractMell_part.pkl', 'wb') as file:\n",
+    "    pickle.dump((features[0:100], emolabel[0:100]),file)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
