--- a/experiment_highpassAudioEmotionRecognition.ipynb
+++ b/experiment_highpassAudioEmotionRecognition.ipynb
@@ -7255,6 +7255,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"nonFilterFeatures-preds.pkl\", \"wb\") as file:\n",
+    "    pickle.dump(preds, file)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
@@ -20156,6 +20166,16 @@
    "source": [
     "with open(\"FilteredFeatures.pkl\", \"wb\") as file:\n",
     "    pickle.dump((features, preds), file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"FilteredFeatures-preds.pkl\", \"wb\") as file:\n",
+    "    pickle.dump(preds, file)"
    ]
   },
   {
