--- a/realtimeEmotionRecognition4_noGender.ipynb
+++ b/realtimeEmotionRecognition4_noGender.ipynb
@@ -75,12 +75,12 @@
     "        self.pastFeaturesLeng = 0\n",
     "        self.emotionResult = np.zeros((0,7))\n",
     "        # loading json and model architecture \n",
-    "        json_file = open('model_json.json', 'r')\n",
+    "        json_file = open('model_json_noGender.json', 'r')\n",
     "        loaded_model_json = json_file.read()\n",
     "        json_file.close()\n",
     "        self.loaded_model = model_from_json(loaded_model_json)\n",
     "        # load weights into new model\n",
-    "        self.loaded_model.load_weights(\"saved_models/Emotion_Model.h5\")\n",
+    "        self.loaded_model.load_weights(\"saved_models_noGender/Emotion_Model.h5\")\n",
     "        print(\"Loaded model from disk\")\n",
     "\n",
     "    def inputAudio(self):\n",
